# skydel

./: README.md  pyproject.toml
.github/workflows/: build.yaml  pytest.yaml
src/skydel/: __init__.py
src/skydel/skydelsdx/: commandfactory.py
tests/: test_skydel.py  test_whl.py
