[project]
name = "skydel"
version = "25.4.0"
description = "Python module to interface with the Skydel GNSS simulator"
authors = [
    {name = "Tesight", email = "hktest@tesight.com"},
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "LGPL-2.1"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "nuitka>=2.8.4",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
ignore_missing_imports = true

[tool.pdm]
distribution = true
